--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -110,7 +110,7 @@
       <span>Home</span>
     </a>
     
-    <a href="/search" class="bottom-nav-item {% if request.path contains '/search' %}active{% endif %}">
+    <a href="/pages/catalog" class="bottom-nav-item {% if request.path contains '/pages/catalog' %}active{% endif %}">
       <div class="nav-icon-container">
         <i class="fas fa-search"></i>
       </div>
